--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "@alexfalconflores/safe-fetch",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A safe and customizable fetch wrapper for secure HTTP requests.",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
+    "types": "./dist/index.d.ts",
     "import": "./dist/index.mjs",
-    "require": "./dist/index.js",
-    "types": "./dist/index.d.ts"
+    "require": "./dist/index.js"
   },
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/alexfalconflores/safe-fetch.git"
