--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "build": "tsup",
     "dev": "tsup src/index.ts --watch --dts",
     "clean": "rm -rf dist",
-    "publish": "npm publish --access public"
+    "release": "npm publish --access public"
   },
   "devDependencies": {
     "tsup": "^8.4.0",
