--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "release": "npm publish --access public"
   },
   "devDependencies": {
-    "tsup": "^8.4.0",
-    "typescript": "^5.8.3"
+    "tsup": "8.4.0",
+    "typescript": "5.8.3",
+    "@types/bun": "1.3.9",
+    "@types/node": "25.2.3"
   }
 }
